# ron-newman

./: CONTRIBUTING.md  FACILITATOR_GUIDE.md  GLYTCH_AI_LITERACY_QUIZ.md  IMPROVEMENT_SUGGESTIONS.md  MD_ONE_PAGE_BRIEF.md  Makefile  PILOT_PLAN.md  README.md  README_8_LAYER_MODEL.md  README_GLYTCH.md  README_SCHOOLS.md  README_WORKSHOP_FUN.md  README_WORKSHOP_GUIDE.md  README_YEGGE_8_LAYERS_EXPLAINED.md  SAFE_USE_IN_SCHOOLS.md  SECURITY.md  SLT_ONE_PAGE_BRIEF.md  STEP_BY_STEP.md  STUDENT_ACTIVITY_SHEET.md  VISION_STATEMENT.md  app.py  default.project.json  project_tickets.csv  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
architecture/: README.md
docs/: AGENTICNESS_ASSESSMENT.md  ARCHITECTURE.md  FRONTEND_QA.md  FRONTEND_SMOKE_TEST.md  PIPELINE_CHECKS.md  READING_GLYTCH_OUTPUT.md  README.md  WOW_DEMO_SCRIPT.md  YEGGE_ALIGNMENT.md  YEGGE_SCORE_RUBRIC.md  architecture.md  architecture_overview.md  edition1_release_gate.md  first_lesson_walkthrough.md  how_llms_work.md  request_rewrite.md  student_worksheet.md  teacher_guide.md  tech_i_can_glytch_book.md  test_plan.md
examples/: LEADERSHIP_SUMMARY_STAGE8.md  SCENARIO_USE_CASES.md  STAGES_ALIGNMENT_README.md
roblox-game/: default.project.json
scripts/: generate_architecture_diagrams.py  populate_github_project.sh  smoke_test.sh
src/: agent_models.py  agent_runtime.py  agentic_maturity.py  agentic_wrappers.py  ai_client.py  constants.py  levels.py  orchestrator.py  runtime_client.py  tools.py  types.py  yegge_workflows.py
tests/: test_agent_runtime.py  test_agentic_builder.py  test_agentic_maturity_api.py  test_agenticness_upgrades.py  test_ai_client.py  test_app_runtime_warning.py  test_architecture_diagram_generator.py  test_book_manuscript_quality.py  test_ollama_agent.py  (+27 more)
(+51 files in other folders)
