[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openshift-must-gather-analyzer"
version = "0.1.0"
description = "Analyze OpenShift 4.16 must-gather bundles and render clear incident RCA reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
openshift-must-gather-analyzer = "openshift_log_analyzer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
